--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.2.9",
     "modern-normalize": "^1.1.0",
     "react": "^17.0.2",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
