--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "modern-normalize": "^1.1.0",
     "react": "^17.0.2",
