--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "modern-normalize": "^1.1.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
